# surge

./: .gitignore  README.md  Taskfile.yml  agents.md  main.py  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: kind-matrix.yml  pull-request.yml
apps/: __init__.py
apps/guardian_api/: __init__.py  __main__.py  domain.py  http.py  models.py  rules.py  service.py  store.py
docs/: verification-baseline.md
docs/requirements/: coverage.md  dependency-graph.md  implementation.yaml  requirements.yaml
docs/spec/: guardian-production-v1.md
policies/: AGENTS.md
scripts/: bootstrap-kind.sh  bootstrap.sh  create-test-cluster.sh  install-test-observability.sh  local-down.sh  local-up.sh  run-local-matrix.sh  test-environment.sh  test-matrix.sh  test-phase0.sh  verification-preflight.sh
scripts/lib/: guardian-run-id.sh
services/action-controller/: AGENTS.md
services/keda-scaler/: AGENTS.md
services/reasoner/: AGENTS.md
testbeds/: AGENTS.md  models.py
testbeds/adapters/: argo_rollouts.py  aws_retail.py  base.py  command_runner.py  keda_rabbitmq.py  online_boutique.py  otel_demo.py
testbeds/environments/: __init__.py  argo_rollouts.py  argo_rollouts_traceability.yaml  aws_retail.py  aws_retail_traceability.yaml  capabilities.py  keda_rabbitmq.py  keda_rabbitmq_traceability.yaml  online_boutique.py  online_boutique_traceability.yaml  otel_demo.py  otel_demo_traceability.yaml
testbeds/evidence/: __init__.py  collector.py  (+2 more)
tests/: __init__.py
tools/: architecture_rules.py  requirements_registry.py  verification-tools.yaml  verification_harness.py
(+100 files in other folders)
