[project]
name = "surge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = ["pyyaml>=6.0.2", "ruff==0.15.22"]

[tool.pytest.ini_options]
markers = [
    "smoke: tests requiring a disposable Kubernetes cluster",
]
